# kleantrans

./: .gitignore  MANIFEST.in  README.md  config.py  dialog.py  keyboard_listener.py  main.py  main_window.py  mouse_listener.py  pyproject.toml  requirements.txt  setup.py  translator.py
app/: __main__.py  config.py  keyboard_listener.py  main_window.py  mouse_listener.py  translator.py
kleantrans.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
