[build-system]
requires = ["setuptools>=74.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kleantrans"
version = "1.0.6"
description = "Clean and translate your highlight text"
readme = "README.md"
authors = [{ name = "Cuong. Duong Manh", email = "cuongpigerr@gmail.com" }]
dependencies = [
    "altgraph>=0.17.4",
    "packaging==24.1",
    "pyinstaller==6.10.0",
    "pyinstaller-hooks-contrib>=2024.8",
    "pynput>=1.7.7",
    "pyperclip>=1.9.0",
    "PyQt6>=6.7.1",
    "PyQt6-Qt6>=6.7.2",
    "PyQt6_sip>=13.8.0",
    "python-xlib>=0.33",
    "setuptools>=74.0.0",
    "six>=1.16.0",
]

[tool.setuptools.package-data]
"kleantrans" = ["app/images/*"]

[tool.setuptools]
include-package-data = true

[project.scripts]
kleantrans = "app.__main__:run"